# floop-python-sdk

./: CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml
docs/: recipes.md
src/floopfloop/: __init__.py  _async_client.py  _async_poll.py  _client.py  _poll.py  _types.py  _version.py  errors.py
src/floopfloop/resources/: api_keys.py  library.py  projects.py  secrets.py  subdomains.py  subscriptions.py  uploads.py  usage.py  user.py
tests/: conftest.py  test_async.py  test_client.py  test_errors.py  test_poll.py  test_resources.py
