[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "floopfloop"
version = "0.1.0a3"
description = "Official Python SDK for the FloopFloop API"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "FloopFloop", email = "info@floopfloop.com" }]
keywords = ["floopfloop", "sdk", "vibe-coding", "api-client"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["httpx>=0.27,<0.29"]

[project.urls]
Homepage = "https://www.floopfloop.com"
Documentation = "https://www.floopfloop.com/docs"
Repository = "https://github.com/FloopFloopAI/floop-python-sdk"
Issues = "https://github.com/FloopFloopAI/floop-python-sdk/issues"
Changelog = "https://github.com/FloopFloopAI/floop-python-sdk/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-httpx>=0.30",
  "ruff>=0.6",
  "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/floopfloop"]

[tool.hatch.build.targets.sdist]
include = ["src/floopfloop", "tests", "README.md", "LICENSE", "CHANGELOG.md", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
# JSON responses are intrinsically `Any`; chasing this in an SDK-surface layer
# adds noise without catching real bugs. Users get typing via stub dicts / TypedDicts.
warn_return_any = false
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
